--- a/html/plans.html
+++ b/html/plans.html
@@ -75,7 +75,7 @@
                 <div class="mid">
                     <span>monthy</span>
                     <label>
-                        <input type="checkbox" checked="" class="toggelebox">
+                        <input type="checkbox"  class="toggelebox">
                         <div class="toggele"></div>
                     </label>
                     <span>yearly</span>
