--- a/index.html
+++ b/index.html
@@ -72,8 +72,10 @@
 
         </div>
         <div class="alert">
-            write your name,email,phone number
-            <button>ok</button>
+            <div class="alert-child">
+                <p> write your name , email & phone number</p>
+                <button>ok</button>
+            </div>
         </div>
     </div>
     <div class="overlay">
